2006-02-19  Martyn Russell  <martyn@imendio.com>
	
	* tests/asyncqueue-test.c: 
	* tests/list-test.c: 
	* tests/slist-test.c: Updated to test _sort, _sort_with_data,
	_insert_sorted and _insert_sorted_with_data API. 

2006-02-18  Matthias Clasen  <mclasen@redhat.com>

	* tests/gobject/Makefile.am: Add paramspec-test

	* tests/gobject/paramspec-test.c: Some GParamSpec tests. 

	* tests/gobject/gvalue-test.c: Add more tests.

2006-02-17  Kang Jeong-Hee  <keizie@gmail.com>

	* glib/gutf8.c (g_utf8_find_prev_char): Correct documentation typo.

2006-02-15  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gthreadpool.c: Fix deadlock when signalling the thread
	which freed a thread pool (#331110, Chris Wilson).

Tue Feb 14 17:00:43 2006  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: only define _XOPEN_SOURCE to 600 to get at 
	posix_memalign() in case we actually are going to use it, because
	we detected a compliant implementation (#328997).

	* configure.in (enable_included_printf): don't include malloc.h when
	testing for posix_memalign() funcitonality, since this may break the 
	test on some systems (#328997).

2006-02-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c: Improve docs.

2006-02-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2006-02-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.6 ===

	* NEWS: Updates

2006-01-31  Behdad Esfahbod  <behdad@gnome.org>

	* docs/reference/glib/tmpl/relations.sgml (g_relation_insert): Specify
	the type of varargs arguments. (bug #317679)

2006-01-31  Matthias Clasen  <mclasen@redhat.com>

	* autogen.sh: Touch README and INSTALL here to pacify 
	automake.  (#329124, Kjartan Maraas, Tim Janik)
	
Tue Jan 31 16:45:03 2006  Tim Janik  <timj@imendio.com>

	* glib/gdataset.c: carry out all dtalist pointer accesses atomically,
	some missing cases where pointed out by Sebastian Wilhelmi.

Tue Jan 31 12:33:48 2006  Tim Janik  <timj@imendio.com>
