@@ -1,3 +1,15 @@
+2006-02-23  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* tests/completion-test.c: (main): Plug leaks reported by
+	valgrind.
+	* tests/convert-test.c: (test_iconv_state), (test_one_half):
+	Same.
+	* tests/patterntest.c: (test_compilation): Same
+	* tests/shell-test.c: (do_argv_test): Same.
+	* tests/unicode-caseconv.c: (main): Same.
+	* tests/uri-test.c: (run_to_uri_tests): Same.
+	Closes bug #332093.
+
 2006-02-19  Martyn Russell  <martyn@imendio.com>
 	
 	* tests/asyncqueue-test.c: 
